--- a/style.css
+++ b/style.css
@@ -1,1 +1,56 @@
+:root {
+  --text-color: #dbe4ef;
+  --card-front-color: #144480;
+  --card-back-color: #0074bf;
+}
+
+body {
+  background: url('img/bg-desktop.web');
+  font-family: ' bai jamjuree';
+}
+
+#container{
+  display: flex;
+}
+
+.cartao {
+  margin: 1rem 1rem;
+  heigth:20rem;
+  flex-grow: 1;
+  flex-basis: calc(33% - 6rem)
+}
+
+.carato_conteudo {
+  backgroud-color: var (--card-front-color);
+  text-aling: center;
+  heigth: 100%;
+}
+
+.cartao_conteudo h3 {
+  color: var(--text-color);
+  border: 1px solid var(--text-color);
+  text-aling: left;
+  padding: 0.5rem;
+  position: absolute;
+  margin: 0.6rem;
+  border-radius: 0.6rem;
+  font-size: 1vw;
+}
+
+.cartao_conteudo p {
+  margin-top: 1rem;
+  padding: 2rem;
+  margin-top: 4rem;
+}
+
+.carato_conteudo_pergunta p {
+  color: var(--text-color);
+  font-weigh: 500;
+}
+
+.cartao_conteudo_resposta p {
+  color: var(--card-back-color);
+  font-weigth: 700;
+}
+
 
