--- a/index.css
+++ b/index.css
@@ -24,3 +24,12 @@
 </article>
 
 <article class="cartao">
+<div class="cartao_conteudo">
+<h3>programação</h3>
+<div class="cartao_conteudo_pergunta">
+<p>o que é css?</p>
+</div>
+</div>
+</article>
+
+
