--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ body {
   backgroud-color: var (--card-front-color);
   text-aling: center;
   heigth: 100%;
+  transform-style: preserve-3d;
+  transition: transform 300ms ease-in-out;
 }
 
 .cartao_conteudo h3 {
@@ -35,6 +37,7 @@ body {
   margin: 0.6rem;
   border-radius: 0.6rem;
   font-size: 1vw;
+  backface-visibility: hidden;
 }
 
 .cartao_conteudo p {
@@ -50,7 +53,36 @@ body {
 
 .cartao_conteudo_resposta p {
   color: var(--card-back-color);
-  font-weigth: 700;
+  font-weigth: 500;
 }
 
+.cartao: hover .cartao_conteudo {
+  transform: rotateY(180deg);
+}
 
+.cartao_conteudo_pergunta,
+.cartao_conteudo_resposta {
+  backface-visibility: hidden;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.cartao_conteudo_resposta {
+  transform: rotatey(180deg);
+}
+
+footer {
+  backgroud-color: black;
+  color: white;
+  position: fixed:
+  bottom: 0;
+  width: 100%;
+  heigth: 2rem;
+}
+
+footer p {
+  text-aling: center;
+  font-size: 0.6rem;
+  margin-top: 0.5rem;
+}
