Add response content to the CSS card

--- a/index.css
+++ b/index.css
@@ -29,6 +29,9 @@
 <div class="cartao_conteudo_pergunta">
 <p>o que é css?</p>
 </div>
+<div class="cartao_conteudo_resposta">
+<p> o javascript é uma linguagem de estilo</p>
+</div>
 </div>
 </article>
 
