Add new article and footer to index.css

--- a/index.css
+++ b/index.css
@@ -35,4 +35,26 @@
 </div>
 </article>
 
+<article class="cartao">
+<div class="cartao_conteudo">
+<h3>programação</h3>
+<div class="cartao_conteudo_resposta">
+<p> o que é html?</p>
+</div>
+<div class="cartao_conteudo_resposta">
+<p>o javascript é uma lingbuagem de marcação</p>
+</div>
+</div>
+</article>-->
+</section>
+</main>
+<footer>
+<p>projeto desenvolvido por anna karolyna 2B </p>
+</footer>
+<scrippt src="app.js"></script>
+<script src="perguntas.js"></script>
+</body>
+
+</html>
+
 
